# ChequeWriter

./: .gitignore  CMakeLists.txt
.github/workflows/: build.yml
src/: MainWindow.py
src/ui/: cheque_writer.ui
